--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ rust-version = "1.69"
 documentation = "https://docs.rs/localizer_rs/"
 readme = ".github/README.md"
 repository = "https://github.com/ElBe-Development/localizer-rs/"
+license = "MIT"
 license-file = "LICENSE.txt"
 keywords = ["i18n", "L10n", "json", "local", "translation"]
 categories = [
@@ -20,4 +21,4 @@ publish = true
 
 [dependencies]
 serde = "1.0.188"
-serde_json = "1.0.106"
+serde_json = "1.0.107"
