--- a/.github/workflows/codecov_workflow.yml
+++ b/.github/workflows/codecov_workflow.yml
@@ -6,7 +6,8 @@ on:
 
 jobs:
     build:
-        - name: Upload coverage reports to Codecov
-          uses: codecov/codecov-action@v3
-          env:
-            CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        steps:
+            - name: Upload coverage reports to Codecov
+              uses: codecov/codecov-action@v3
+              env:
+                CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
