--- a/.github/workflows/codecov_workflow.yml
+++ b/.github/workflows/codecov_workflow.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
     build:
+        runs-on: ubuntu-latest
         steps:
             - name: Upload coverage reports to Codecov
               uses: codecov/codecov-action@v3
